# python-sgre

./: CMakeLists.txt  LICENSE  README.md
libs/cglib/: hash.h
src/: Query.h
test/: config.json  navigation.geojson  test.py
wrapper/: Wrapper.cpp
